--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "jweaver1-portfolio",
   "version": "0.1.0",
-  "homepage": "https://jweaver1.github.it/jweaver1-portfolio",
+  "homepage": "https://johnweaver1.github.io/React-Portfolio/",
   "private": true,
   "dependencies": {
     "@fontsource/roboto-slab": "^4.5.11",
